xcurl/src/main/java/com/photowey/plugin/xcurl/lang/parser.bnf
{
  parserClass="com.photowey.plugin.xcurl.lang.CURLParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="CURL"
  psiImplClassSuffix="Impl"
  psiPackage="com.photowey.plugin.xcurl.lang.psi"
  psiImplPackage="com.photowey.plugin.xcurl.lang.psi.impl"

  elementTypeHolderClass="com.photowey.plugin.xcurl.lang.CURLTypes"

  elementTypeClass="com.photowey.plugin.xcurl.lang.CURLElementType"
  tokenTypeClass="com.photowey.plugin.xcurl.lang.CURLTokenType"

  tokens = [
        WHITE_SPACE = 'regexp:\s+'
        URL = 'regexp:(https?|ftp|file)://[-A-Za-z0-9+&@#/%?=~_|!:,.;]+[-A-Za-z0-9+&@#/%=~_|]'
        QUOTED_STRING = "regexp:('([^'\\]|\\.)*'|\"([^\"\\]|\\.)*\")"
        BASIC_STRING = "regexp:[0-9a-zA_Z]*"
        COMMENT = 'regexp://.*|/\*\*.*\*/'
        OPTION = 'regexp:--append|-a|-A|--user-agent|-anyauth|-u|--user|-G|--get|-X|--request|--header|-H|--output|-o|--data|-d'
        METHOD = 'regexp:GET| HEAD| POST| PATCH| PUT| DELETE| CONNECT| OPTIONS| TRACE'
  ]
}

XCURLFile ::= COMMAND*
COMMAND ::= CURL [OPTIONS*] URL
OPTIONS ::= Option1Statement | Option2Statement | Option3Statement | Option4Statement | Option5Statement | Option6Statement | Option7Statement | Option8Statement
Option1Statement ::= OPTION1 QUOTED_STRING
OPTION1 ::= '-a'|'--append'
Option2Statement ::= OPTION2 QUOTED_STRING
OPTION2 ::= '-A'|'--user-agent'
Option3Statement ::= OPTION3 KV
OPTION3 ::= ('-anyauth') ('-u' | '--user')
Option4Statement ::= OPTION4
OPTION4 ::= '-G' | '--get'
Option5Statement ::= OPTION5 METHOD
OPTION5 ::= '-X'|'--request'
Option6Statement ::= OPTION6 QUOTED_STRING
OPTION6 ::= '-H'|'--header'
Option7Statement ::= OPTION7 QUOTED_STRING
OPTION7 ::= '-o'|'--output'
Option8Statement ::= OPTION8 QUOTED_STRING
OPTION8 ::= '-d'|'--data'

KV ::= BASIC_STRING':'BASIC_STRING
